@@ -103,8 +103,6 @@ my $infos;
 my $model;
 my $model2;
 my $where;
-my $update_param;
-my $insert_param;
 my $join;
 my $binary;
 my $user_table_info;
@@ -379,8 +377,7 @@ $dbi->delete_all(table => $table1);
 $dbi->insert({$key1 => 1, $key2 => 2}, table => $table1);
 $dbi->insert({$key1 => 3, $key2 => 4}, table => $table1);
 $source = "select $key1, $key2 from $table1";
-$query = $dbi->create_query($source);
-$result = $dbi->execute($query);
+$result = $dbi->execute($source);
 
 @rows = ();
 while (my $row = $result->fetch) {
@@ -388,18 +385,18 @@ while (my $row = $result->fetch) {
 }
 is_deeply(\@rows, [[1, 2], [3, 4]], "fetch");
 
-$result = $dbi->execute($query);
+$result = $dbi->execute($source);
 @rows = ();
 while (my $row = $result->fetch_hash) {
   push @rows, {%$row};
 }
 is_deeply(\@rows, [{$key1 => 1, $key2 => 2}, {$key1 => 3, $key2 => 4}], "fetch_hash");
 
-$result = $dbi->execute($query);
+$result = $dbi->execute($source);
 $rows = $result->fetch_all;
 is_deeply($rows, [[1, 2], [3, 4]]);
 
-$result = $dbi->execute($query);
+$result = $dbi->execute($source);
 $rows = $result->fetch_hash_all;
 is_deeply($rows, [{$key1 => 1, $key2 => 2}, {$key1 => 3, $key2 => 4}], "all");
 
@@ -504,14 +501,6 @@ is_deeply($rows, [{$key1 => 1, $key2 => 2}], 'insert append');
 
 eval{$dbi->insert({';' => 1}, table => 'table')};
 like($@, qr/safety/);
-
-eval { $dbi->execute("drop table ${q}table$p") };
-$dbi->execute($create_table_reserved);
-$dbi->apply_filter('table', select => {out => sub { $_[0] * 2}});
-$dbi->insert({select => 1}, table => 'table');
-$result = $dbi->execute("select * from ${q}table$p");
-$rows   = $result->all;
-is_deeply($rows, [{select => 2, update => undef}], "reserved word");
 
 eval { $dbi->execute("drop table $table1") };
 $dbi->execute($create_table1);
@@ -855,29 +844,8 @@ like($@, qr/safety/);
 eval{$dbi->update({$key1 => 1}, table => $table1, where => {';' => 1})};
 like($@, qr/safety/);
 
-eval { $dbi->execute("drop table $table1") };
-eval { $dbi->execute("drop table ${q}table$p") };
-$dbi->execute($create_table_reserved);
-$dbi->apply_filter('table', select => {out => sub { $_[0] * 2}});
-$dbi->apply_filter('table', update => {out => sub { $_[0] * 3}});
-$dbi->insert({select => 1}, table => 'table');
-$dbi->update({update => 2}, table => 'table', where => {select => 1});
-$result = $dbi->execute("select * from ${q}table$p");
-$rows   = $result->all;
-is_deeply($rows, [{select => 2, update => 6}], "reserved word");
-
 eval {$dbi->update_all({';' => 2}, table => 'table') };
 like($@, qr/safety/);
-
-eval { $dbi->execute("drop table ${q}table$p") };
-$dbi->execute($create_table_reserved);
-$dbi->apply_filter('table', select => {out => sub { $_[0] * 2}});
-$dbi->apply_filter('table', update => {out => sub { $_[0] * 3}});
-$dbi->insert({select => 1}, table => 'table');
-$dbi->update({update => 2}, table => 'table', where => {'table.select' => 1});
-$result = $dbi->execute("select * from ${q}table$p");
-$rows   = $result->all;
-is_deeply($rows, [{select => 2, update => 6}], "reserved word");
 
 eval { $dbi->execute("drop table $table1") };
 $dbi->execute($create_table1_2);
@@ -1089,17 +1057,6 @@ like($@, qr/where/, "where key-value pairs not specified");
 eval{$dbi->delete(table => $table1, where => {';' => 1})};
 like($@, qr/safety/);
 
-$dbi = undef;
-$dbi = DBIx::Custom->connect;
-eval { $dbi->execute("drop table ${q}table$p") };
-$dbi->execute($create_table_reserved);
-$dbi->apply_filter('table', select => {out => sub { $_[0] * 2}});
-$dbi->insert({select => 1}, table => 'table');
-$dbi->delete(table => 'table', where => {select => 1});
-$result = $dbi->execute("select * from ${q}table$p");
-$rows   = $result->all;
-is_deeply($rows, [], "reserved word");
-
 test 'delete_all';
 eval { $dbi->execute("drop table $table1") };
 $dbi->execute($create_table1);
@@ -1151,15 +1108,6 @@ $rows = $dbi->select(
   relation  => {"$table1.$key1" => "$table2.$key1"}
 )->all;
 is_deeply($rows, [{u"${table1}_$key1" => 1, u"${table2}_$key1" => 1, $key2 => 2, $key3 => 5}], "relation : no exists where");
-
-$dbi = DBIx::Custom->connect;
-eval { $dbi->execute("drop table ${q}table$p") };
-$dbi->execute($create_table_reserved);
-$dbi->apply_filter('table', select => {out => sub { $_[0] * 2}});
-$dbi->insert({select => 1, update => 2}, table => 'table');
-$result = $dbi->select(table => 'table', where => {select => 1});
-$rows   = $result->all;
-is_deeply($rows, [{select => 2, update => 2}], "reserved word");
 
 eval { $dbi->execute("drop table $table1") };
 $dbi->execute($create_table1);
@@ -1256,11 +1204,6 @@ $dbi->execute($create_table1);
   like($@, qr/Custom.*\.t /s, "fail : verbose");
 }
 
-$query = $dbi->execute("select * from $table1 where $key1 = :$key1", {}, query => 1);
-$dbi->dbh->disconnect;
-eval{$dbi->execute($query, {$key1 => {a => 1}})};
-ok($@, "execute fail");
-
 test 'transaction2';
 $dbi = DBIx::Custom->connect;
 eval { $dbi->execute("drop table $table1") };
@@ -1338,126 +1281,6 @@ is($dbi->twice(5), 10 , "second");
 
 eval {$dbi->XXXXXX};
 ok($@, "not exists");
-
-test 'out filter';
-$dbi = DBIx::Custom->connect;
-eval { $dbi->execute("drop table $table1") };
-$dbi->execute($create_table1);
-$dbi->register_filter(twice => sub { $_[0] * 2 });
-$dbi->register_filter(three_times => sub { $_[0] * 3});
-$dbi->apply_filter(
-  $table1, $key1 => {out => 'twice', in => 'three_times'}, 
-            $key2 => {out => 'three_times', in => 'twice'});
-$dbi->insert({$key1 => 1, $key2 => 2}, table => $table1);
-$result = $dbi->execute("select * from $table1");
-$row   = $result->fetch_hash_one;
-is_deeply($row, {$key1 => 2, $key2 => 6}, "insert");
-$result = $dbi->select(table => $table1);
-$row   = $result->one;
-is_deeply($row, {$key1 => 6, $key2 => 12}, "insert");
-
-$dbi = DBIx::Custom->connect;
-eval { $dbi->execute("drop table $table1") };
-$dbi->execute($create_table1);
-$dbi->register_filter(twice => sub { $_[0] * 2 });
-$dbi->register_filter(three_times => sub { $_[0] * 3});
-$dbi->apply_filter(
-  $table1, $key1 => {out => 'twice', in => 'three_times'}, 
-            $key2 => {out => 'three_times', in => 'twice'});
-$dbi->apply_filter(
-  $table1, $key1 => {out => undef}
-); 
-$dbi->insert({$key1 => 1, $key2 => 2}, table => $table1);
-$result = $dbi->execute("select * from $table1");
-$row   = $result->one;
-is_deeply($row, {$key1 => 1, $key2 => 6}, "insert");
-
-$dbi = DBIx::Custom->connect;
-eval { $dbi->execute("drop table $table1") };
-$dbi->execute($create_table1);
-$dbi->register_filter(twice => sub { $_[0] * 2 });
-$dbi->apply_filter(
-  $table1, $key1 => {out => 'twice', in => 'twice'}
-);
-$dbi->insert({$key1 => 1, $key2 => 2},table => $table1, filter => {$key1 => undef});
-$dbi->update({$key1 => 2}, table => $table1, where => {$key2 => 2});
-$result = $dbi->execute("select * from $table1");
-$row   = $result->one;
-is_deeply($row, {$key1 => 4, $key2 => 2}, "update");
-
-$dbi = DBIx::Custom->connect;
-eval { $dbi->execute("drop table $table1") };
-$dbi->execute($create_table1);
-$dbi->register_filter(twice => sub { $_[0] * 2 });
-$dbi->apply_filter(
-  $table1, $key1 => {out => 'twice', in => 'twice'}
-);
-$dbi->insert({$key1 => 2, $key2 => 2}, table => $table1, filter => {$key1=> undef});
-$dbi->delete(table => $table1, where => {$key1 => 1});
-$result = $dbi->execute("select * from $table1");
-$rows   = $result->all;
-is_deeply($rows, [], "delete");
-
-$dbi = DBIx::Custom->connect;
-eval { $dbi->execute("drop table $table1") };
-$dbi->execute($create_table1);
-$dbi->register_filter(twice => sub { $_[0] * 2 });
-$dbi->apply_filter(
-  $table1, $key1 => {out => 'twice', in => 'twice'}
-);
-$dbi->insert({$key1 => 2, $key2 => 2}, table => $table1, filter => {$key1 => undef});
-$result = $dbi->select(table => $table1, where => {$key1 => 1});
-$result->filter({$key2 => 'twice'});
-$rows   = $result->all;
-is_deeply($rows, [{$key1 => 4, $key2 => 4}], "select");
-
-$dbi = DBIx::Custom->connect;
-eval { $dbi->execute("drop table $table1") };
-$dbi->execute($create_table1);
-$dbi->register_filter(twice => sub { $_[0] * 2 });
-$dbi->apply_filter(
-  $table1, $key1 => {out => 'twice', in => 'twice'}
-);
-$dbi->insert({$key1 => 2, $key2 => 2}, table => $table1, filter => {$key1 => undef});
-$result = $dbi->execute("select * from $table1 where $key1 = :$key1 and $key2 = :$key2",
-  {$key1 => 1, $key2 => 2},
-  table => [$table1]);
-$rows   = $result->all;
-is_deeply($rows, [{$key1 => 4, $key2 => 2}], "execute");
-
-
-$dbi = DBIx::Custom->connect;
-eval { $dbi->execute("drop table $table1") };
-eval { $dbi->execute("drop table $table2") };
-$dbi->execute($create_table1);
-$dbi->execute($create_table2);
-$dbi->register_filter(twice => sub { $_[0] * 2 });
-$dbi->register_filter(three_times => sub { $_[0] * 3 });
-$dbi->apply_filter(
-  $table1, $key2 => {out => 'twice', in => 'twice'}
-);
-$dbi->apply_filter(
-  $table2, $key3 => {out => 'three_times', in => 'three_times'}
-);
-$dbi->insert({$key1 => 5, $key2 => 2}, table => $table1, filter => {$key2 => undef});
-$dbi->insert({$key1 => 5, $key3 => 6}, table => $table2, filter => {$key3 => undef});
-$result = $dbi->select(
-  table => [$table1, $table2],
-  column => [$key2, $key3],
-  where => {"$table1.$key2" => 1, "$table2.$key3" => 2}, relation => {"$table1.$key1" => "$table2.$key1"});
-
-$result->filter({$key2 => 'twice'});
-$rows   = $result->all;
-is_deeply($rows, [{$key2 => 4, $key3 => 18}], "select : join");
-
-$result = $dbi->select(
-  table => [$table1, $table2],
-  column => [$key2, $key3],
-  where => {$key2 => 1, $key3 => 2}, relation => {"$table1.$key1" => "$table2.$key1"});
-
-$result->filter({$key2 => 'twice'});
-$rows   = $result->all;
-is_deeply($rows, [{$key2 => 4, $key3 => 18}], "select : join : omit");
 
 test 'connect super';
 $dbi = DBIx::Custom->connect;
@@ -1776,42 +1599,6 @@ $dbi = DBIx::Custom->connect;
 eval {$dbi->select($key1)};
 ok($@);
 
-test 'more tests';
-$dbi = DBIx::Custom->connect;
-eval{$dbi->apply_filter('table', 'column', [])};
-like($@, qr/apply_filter/);
-
-eval{$dbi->apply_filter('table', 'column', {outer => 2})};
-like($@, qr/apply_filter/);
-
-$dbi->apply_filter(
-
-);
-$dbi = DBIx::Custom->connect;
-eval { $dbi->execute("drop table $table1") };
-$dbi->execute($create_table1);
-$dbi->insert({$key1 => 1, $key2 => 2}, table => $table1);
-$dbi->insert({$key1 => 3, $key2 => 4}, table => $table1);
-$dbi->apply_filter($table1, $key2, 
-                 {in => sub { $_[0] * 3 }, out => sub { $_[0] * 2 }});
-$rows = $dbi->select(table => $table1, where => {$key2 => 1})->all;
-is_deeply($rows, [{$key1 => 1, $key2 => 6}]);
-
-$dbi = DBIx::Custom->connect;
-eval { $dbi->execute("drop table $table1") };
-$dbi->execute($create_table1);
-$dbi->insert({$key1 => 1, $key2 => 2}, table => $table1);
-$dbi->insert({$key1 => 3, $key2 => 4}, table => $table1);
-$dbi->apply_filter($table1, $key2, {});
-$rows = $dbi->select(table => $table1, where => {$key2 => 2})->all;
-is_deeply($rows, [{$key1 => 1, $key2 => 2}]);
-
-$dbi = DBIx::Custom->connect;
-eval {$dbi->apply_filter($table1, $key2, {out => 'no'})};
-like($@, qr/not registered/);
-eval {$dbi->apply_filter($table1, $key2, {in => 'no'})};
-like($@, qr/not registered/);
-
 eval{DBIx::Custom->connect(dsn => undef)};
 like($@, qr/_connect/);
 
@@ -1911,18 +1698,6 @@ eval { $dbi->execute("drop table $table1") };
 $dbi->execute($create_table1_2);
 $param = {$key1 => 1, $key2 => 2};
 $values_clause = $dbi->values_clause($param);
-$sql = <<"EOS";
-insert into $table1 $values_clause
-EOS
-$dbi->execute($sql, $param, table => $table1);
-is($dbi->select(table => $table1)->one->{$key1}, 1);
-is($dbi->select(table => $table1)->one->{$key2}, 2);
-
-$dbi = DBIx::Custom->connect;
-eval { $dbi->execute("drop table $table1") };
-$dbi->execute($create_table1_2);
-$param = {$key1 => 1, $key2 => 2};
-$values_clause = $dbi->insert_param($param);
 $sql = <<"EOS";
 insert into $table1 $values_clause
 EOS
@@ -2793,70 +2568,6 @@ $result = $dbi->execute(
 $rows = $result->all;
 is_deeply($rows, [{$key1 => 1, $key2 => 2, $key3 => 3, $key4 => 4, $key5 => 5}]);
 
-test 'high perfomance way';
-eval { $dbi->execute("drop table $table1") };
-$dbi->execute($create_table1_highperformance);
-$rows = [
-  {$key7 => 1, $key6 => 2, $key5 => 3, $key4 => 4, $key3 => 5, $key2 => 6, $key1 => 7},
-  {$key7 => 1, $key6 => 2, $key5 => 3, $key4 => 4, $key3 => 5, $key2 => 6, $key1 => 8},
-];
-{
-  my $query;
-  for my $row (@$rows) {
-    $query ||= $dbi->insert($row, table => $table1, query => 1);
-    $dbi->execute($query, $row, filter => {$key7 => sub { $_[0] * 2 }});
-  }
-  is_deeply($dbi->select(table => $table1)->all,
-    [
-      {$key7 => 2, $key6 => 2, $key5 => 3, $key4 => 4, $key3 => 5, $key2 => 6, $key1 => 7},
-      {$key7 => 2, $key6 => 2, $key5 => 3, $key4 => 4, $key3 => 5, $key2 => 6, $key1 => 8},
-    ]
-  );
-}
-
-eval { $dbi->execute("drop table $table1") };
-$dbi->execute($create_table1_highperformance);
-$rows = [
-  {$key7 => 1, $key6 => 2, $key5 => 3, $key4 => 4, $key3 => 5, $key2 => 6, $key1 => 7},
-  {$key7 => 1, $key6 => 2, $key5 => 3, $key4 => 4, $key3 => 5, $key2 => 6, $key1 => 8},
-];
-{
-  my $query;
-  my $sth;
-  for my $row (@$rows) {
-    $query ||= $dbi->insert($row, table => $table1, query => 1);
-    $sth ||= $query->{sth};
-    $sth->execute(map { $row->{$_} } sort keys %$row);
-  }
-  is_deeply($dbi->select(table => $table1)->all,
-    [
-      {$key7 => 1, $key6 => 2, $key5 => 3, $key4 => 4, $key3 => 5, $key2 => 6, $key1 => 7},
-      {$key7 => 1, $key6 => 2, $key5 => 3, $key4 => 4, $key3 => 5, $key2 => 6, $key1 => 8},
-    ]
-  );
-}
-
-eval { $dbi->execute("drop table $table1") };
-$dbi->execute($create_table1_highperformance);
-$rows = [
-  {$key7 => 10, $key6 => 2, $key5 => 3, $key4 => 4, $key3 => 5, $key2 => 5},
-  {$key7 => 11, $key6 => 2, $key5 => 3, $key4 => 4, $key3 => 5, $key2 => 6},
-];
-{
-  $model = $dbi->create_model(table => $table1, primary_key => $key1);
-  my $query;
-  for my $row (@$rows) {
-    $query ||= $model->insert($row, query => 1);
-    $dbi->execute($query, $row, filter => {$key7 => sub { $_[0] * 2 }});
-  }
-  is_deeply($dbi->select(table => $table1, append => 'order by key2')->all,
-    [
-      {$key7 => 20, $key6 => 2, $key5 => 3, $key4 => 4, $key3 => 5, $key2 => 5, $key1 => undef},
-      {$key7 => 22, $key6 => 2, $key5 => 3, $key4 => 4, $key3 => 5, $key2 => 6, $key1 => undef},
-    ]
-  );
-}
-
 test 'result';
 $dbi = DBIx::Custom->connect;
 eval { $dbi->execute("drop table $table1") };
@@ -3150,38 +2861,11 @@ $dbi->execute($create_table1_2);
 $dbi->insert({$key1 => 1, $key2 => 2, $key3 => 3, $key4 => 4, $key5 => 5}, table => $table1);
 $dbi->insert({$key1 => 6, $key2 => 7, $key3 => 8, $key4 => 9, $key5 => 10}, table => $table1);
 
-$param = {$key2 => 11, $key3 => 33};
-$assign_clause = $dbi->update_param($param, {no_set => 1});
-$sql = <<"EOS";
-update $table1 set $assign_clause
-where $key1 = 1
-EOS
-$dbi->execute($sql, $param);
-$result = $dbi->execute("select * from $table1 order by $key1", table => $table1);
-$rows   = $result->all;
-is_deeply($rows, [{$key1 => 1, $key2 => 11, $key3 => 33, $key4 => 4, $key5 => 5},
-  {$key1 => 6, $key2 => 7,  $key3 => 8, $key4 => 9, $key5 => 10}],
-  "update param no_set");
-
-          
 $dbi = DBIx::Custom->connect;
 eval { $dbi->execute("drop table $table1") };
 $dbi->execute($create_table1_2);
 $dbi->insert({$key1 => 1, $key2 => 2, $key3 => 3, $key4 => 4, $key5 => 5}, table => $table1);
 $dbi->insert({$key1 => 6, $key2 => 7, $key3 => 8, $key4 => 9, $key5 => 10}, table => $table1);
-
-$param = {$key2 => 11};
-$assign_clause = $dbi->assign_param($param);
-$sql = <<"EOS";
-update $table1 set $assign_clause
-where $key1 = 1
-EOS
-$dbi->execute($sql, $param, table => $table1);
-$result = $dbi->execute("select * from $table1 order by $key1");
-$rows   = $result->all;
-is_deeply($rows, [{$key1 => 1, $key2 => 11, $key3 => 3, $key4 => 4, $key5 => 5},
-  {$key1 => 6, $key2 => 7,  $key3 => 8, $key4 => 9, $key5 => 10}],
-  "basic");
 
 $param = {$key2 => 11};
 $assign_clause = $dbi->assign_clause($param);
